# immutable-linux-auditor

./: 0-AI-MANIFEST.a2ml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  ECOSYSTEM.scm  META.scm  README.adoc  README.md  ROADMAP.adoc  ROADMAP.md  SECURITY.md  STATE.scm
.github/workflows/: mirror.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
docs/: INTEGRATION.md  MANUAL.md  ROADMAP.md
packaging/container/: Containerfile  README.md  build.sh
packaging/container/guix/: manifest.scm
packaging/container/nix/: flake.nix
packaging/container/scripts/: a2mla
packaging/flatpak/: org.hyperpolymath.ImmutableAuditor.json
qml/: Main.qml
src/: AuditorData.cpp  AuditorData.h  main.cpp
